kubernetes/13-ide-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ide-ingress
  namespace: ads-system
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: '200,302'
spec:
  rules:
  - host: ads.dataiesb.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ide-service
            port:
              number: 80
